Rewrite task 14